Run app with url POST request